# CameraTraps

./: .gitignore  INSTALLATION.md  README.md  __init__.py  collaborations.md  environment-detector.yml  environment.yml  megadetector.md  project.toml  pyproject.toml  setup.py
PivotalWildlife.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PivotalWildlife/data/: transforms.py
PivotalWildlife/models/classification/resnet/: base_classifier.py
PivotalWildlife/models/detection/yolov5/: base_detector.py
PytorchWildlife/models/detection/yolov5/: base_detector.py  megadetector.py
PytorchWildlife/utils/: misc.py
api/: README.md
api/batch_processing/: README.md
api/batch_processing/api/orchestrator_api/: api_config.py  orchestrator.py  runserver.py
api/batch_processing/api_core/: environment-api.yml  environment-batch-api.yml  server.py  server_api_config.py  server_job_status_table.py  server_utils.py
api/batch_processing/integration/: README.md
api/batch_processing/postprocessing/: CameraTrapJsonManagerApp.md  convert_output_format.py  load_api_results.py  subset_json_detector_output.py
api/synchronous/: README.md
archive/api/batch_processing/: find_problematic_detections.py
archive/archive/classification_marcel/: detect_and_predict_image.py  eval_two_class_pr.py
archive/classification/: json_validator.py  run_classifier.py  train_classifier.py
archive/data_management/databases/: analyze_json_database.py
archive/data_management/importers/: awc_to_json.py
archive/data_management/megadb/: README.md
archive/detection/: run_detector.py  run_detector_batch.py
archive/research/active_learning/: run.py  train_embedding.py
classification/: README.md
data_management/: README.md  sanity_check_json_db.py
data_management/importers/: rspb_to_json.py
data_management/importers/eMammal/: 0_eMammal_label_stats.ipynb  1_eMammal_COCO_format_database.ipynb
data_management/tfrecords/: README.md  make_tfrecords_with_train_test_split.py
detection/: README.md  pytorch_detector.py  run_tf_detector.py  run_tf_detector_batch.py
pivotal_wildlife/: __init__.py
pivotal_wildlife/data/: datasets.py  transforms.py
pivotal_wildlife/models/detection/: __init__.py  base_detector.py  megadetectorv5.py  megadetectorv6.py
pivotal_wildlife/utils/: post_process.py
research/active_learning/deep_learning/: networks.py  utils.py
tfrecords/: README.md
visualization/: README.md  visualization_utils.py  visualize_detector_output.py
(+41 files in other folders)
