[tool.poetry]
name = "pivotal_wildlife"
version = "0.1.3"
description = "a PyTorch Collaborative Deep Learning Framework for Conservation with a Pivotal twist"
authors = ["Jack Edney <jack.edney@pivotal.earth>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PivotalFuture/CameraTraps.git"
repository = "https://github.com/PivotalFuture/CameraTraps.git"
keywords = [
    "pytorch",
    "wildlife",
    "megadetector",
    "conservation",
    "animal",
    "detection",
    "classification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "*"
torch = ">=2.1.0"
torchvision = ">=0.16.0"
tqdm = ">=4.66.2"
Pillow = ">=10.2.0"
supervision = ">=0.19.0"
gradio = ">=4.21.0"
chardet = ">=5.2.0"
ultralytics-yolov5 = ">=0.1.1"
ultralytics = ">=8.2.50"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
